DRONI-117 <feat> : 채팅방 생성, 기존 채팅방 message를 가져오는 api 추가
